--- a/package.json
+++ b/package.json
@@ -2,10 +2,26 @@
   "name": "geojson-bounding-box",
   "version": "0.0.0",
   "description": "Efficiently computes a GeoJSON's bounding box.",
-  "main": "index.js",
+  "main": "geojson-bounding-box.js",
+  "module": "index.js",
+  "unpkg": "geojson-bounding-box.min.js",
+  "jsdelivr": "geojson-bounding-box.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "run-s lint bundle",
+    "bundle": "rollup --silent -c",
+    "lint": "run-s lint:js lint:md",
+    "lint:js": "eslint index.js rollup.config.js",
+    "lint:md": "remark -q .",
+    "prepare": "npm run build",
+    "test": "run-s test:lint test:build",
+    "test:build": "nyc --reporter=lcov --reporter=text tap ./test/test.js",
+    "test:lint": "eslint ./test/test.js"
   },
+  "files": [
+    "index.js",
+    "geojson-bounding-box.js",
+    "geojson-bounding-box.min.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dpmcmlxxvi/geojson-bounding-box.git"
@@ -21,5 +37,25 @@
   "bugs": {
     "url": "https://github.com/dpmcmlxxvi/geojson-bounding-box/issues"
   },
-  "homepage": "https://github.com/dpmcmlxxvi/geojson-bounding-box#readme"
+  "homepage": "https://github.com/dpmcmlxxvi/geojson-bounding-box#readme",
+  "devDependencies": {
+    "coveralls": "^3.0.4",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.13.0",
+    "np": "^5.0.3",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^14.1.1",
+    "remark-cli": "^6.0.1",
+    "remark-preset-lint-markdown-style-guide": "^2.1.2",
+    "rollup": "^1.14.3",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.1",
+    "rollup-plugin-terser": "^5.0.0",
+    "tap": "^14.2.2"
+  },
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-lint-markdown-style-guide"
+    ]
+  }
 }
